# optimization_backtester

./: README.md  pyproject.toml
notebook/: 5_predict.ipynb  fitted_model.py
notebook/data/: SPY.parquet
src/bt/: __init__.py  backtester.py  optimizer.py  strategy_model.py
src/bt/core/: logging_config.py
src/bt/indicators/: base_indicator.py  bollinger_band.py  compare_column.py  compare_value.py  macd.py  moving_average.py  rsi.py  single_momentum.py
src/bt/metrics/: alpha.py  base_metric.py  cagr.py  calmar_ratio.py  mdd.py
src/bt/schemas/: loss.py  portfolio.py  stock.py  trade.py
tests/: conftest.py  fixtures.py  test_backtester.py
